install[nzbhydra2]: NZB Meta Search app

--- a/.env
+++ b/.env
@@ -36,6 +36,7 @@ PORTAINER=/data/ssd/mediabox/portainer
 CALIBRE=/data/ssd/mediabox/calibre
 ORGANIZR=/data/ssd/mediabox/organizr
 DUPLICATI=/data/ssd/mediabox/duplicati
+NZBHYDRA2=/data/ssd/mediabox/nzbhydra2
 
 #
 # Calibre credentials
@@ -56,4 +57,3 @@ TORRENT_DOWNLOADS=/data/ssd/mediabox/deluge/downloads
 # Your local timezone
 #
 TIMEZONE=America/Argentina/Buenos_Aires
-
