install[sabnzbd]: Usenet downloader

--- a/.env
+++ b/.env
@@ -37,6 +37,7 @@ CALIBRE=/data/ssd/mediabox/calibre
 ORGANIZR=/data/ssd/mediabox/organizr
 DUPLICATI=/data/ssd/mediabox/duplicati
 NZBHYDRA2=/data/ssd/mediabox/nzbhydra2
+SABNZBD=/data/ssd/mediabox/sabnzbd
 
 #
 # Calibre credentials
@@ -46,12 +47,13 @@ CALIBRE_USERNAME=cmiranda
 CALIBRE_PASSWORD=94d74fb270e74383fb99434b91c75118
 
 #
-# Torrent client downloads directory. It will hold incomplete and completed downloads.
+# Downloads directory. It will hold incomplete and completed downloads.
 # If you're using an external HDD to store your media files, 
 #   it might be a good idea to keep downloads (until moved by Sonarr/Radarr, and if you have enough space) in an SSD disk partition.
 #   This aims to avoid constant write ops on the external HDD.
 #
 TORRENT_DOWNLOADS=/data/ssd/mediabox/deluge/downloads
+USENET_DOWNLOADS=/data/ssd/mediabox/sabnzbd/downloads
 
 #
 # Your local timezone
