--- a/.github/workflows/multimedia-stack-deployment.yml
+++ b/.github/workflows/multimedia-stack-deployment.yml
@@ -6,9 +6,8 @@ on:
     branches:
       - master
 
-    # Publish `v1.2.3` tags as releases.
+    # Run tests for any tags.
     tags:
-      - v*
 
   # Run tests for any PRs.
   pull_request:
