github-actions[tags]: Run tests for all tags

--- a/.github/workflows/multimedia-stack-deployment.yml
+++ b/.github/workflows/multimedia-stack-deployment.yml
@@ -6,7 +6,7 @@ on:
     branches:
       - master
 
-    # Publish `v1.2.3` tags as releases.
+    # Run tests for any tags.
     tags:
       - v*
 
