traefik[letsencypt]: SSL certificate

--- a/.env
+++ b/.env
@@ -10,9 +10,11 @@ PUID=1000
 PGID=1000
 
 #
-# My custom domain
+# Custom domain and certificates
 #
 DOMAIN=crismiranda.net
+LETSENCRYPT=/etc/letsencrypt
+SSL_ACME_EMAIL=crism60@gmail.com
 
 #
 # Multimedia files location
