traefik[letsencypt]: Store acme.json in a mounted volume

--- a/.env
+++ b/.env
@@ -39,8 +39,9 @@ ORGANIZR=/data/ssd/mediabox/organizr
 DUPLICATI=/data/ssd/mediabox/duplicati
 NZBHYDRA2=/data/ssd/mediabox/nzbhydra2
 SABNZBD=/data/ssd/mediabox/sabnzbd
+TRAEFIK=/data/ssd/mediabox/traefik
 
-#
+#cmiranda
 # Calibre credentials
 # PASSWORD => md5 hash for the calibre desktop gui.
 #
