install[openvpn]: Generic OpenVPN client container

--- a/.env
+++ b/.env
@@ -16,6 +16,11 @@ DOMAIN=crismiranda.net
 SSL_ACME_EMAIL=crism60@gmail.com
 
 #
+# VPN DNS (e.g: https://support.nordvpn.com/General-info/1047409702/What-are-your-DNS-server-addresses.htm)
+#
+VPN_DNS=103.86.96.100
+
+#
 # Multimedia files location
 #
 TV_SHOWS=/data/2tb/media/tv
@@ -40,8 +45,9 @@ DUPLICATI=/data/ssd/mediabox/duplicati
 NZBHYDRA2=/data/ssd/mediabox/nzbhydra2
 SABNZBD=/data/ssd/mediabox/sabnzbd
 TRAEFIK=/data/ssd/mediabox/traefik
+OPENVPN=/data/ssd/mediabox/openvpn
 
-#cmiranda
+#
 # Calibre credentials
 # PASSWORD => md5 hash for the calibre desktop gui.
 #
