--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,9 @@ services:
     restart: always
     container_name: traefik
     ports:
-      - "80:80"
-      - "443:443"
-      - "8080:8080" # traefik dashboard
+      - 80:80
+      - 443:443
+      - 8080:8080 # traefik dashboard
     command:
       - --api.insecure=true
       - --api.dashboard=false
@@ -42,9 +42,45 @@ services:
       default:
         ipv4_address: 172.20.50.1
     labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.api.rule=Host(`traefik.${DOMAIN}`)"
-      - "traefik.http.routers.api.service=api@internal"
+      - traefik.enable=true
+      - traefik.http.routers.api.rule=Host(`traefik.${DOMAIN}`)
+      - traefik.http.routers.api.service=api@internal
+
+  vpn:
+    image: dperson/openvpn-client
+    container_name: vpn
+    cap_add:
+      - net_admin
+    environment:
+      - DNS=${VPN_DNS}
+      - TZ=${TIMEZONE}
+    networks:
+      default:
+        ipv4_address: 172.20.50.2
+    read_only: false
+    tmpfs:
+      - /run
+      - /tmp
+    restart: unless-stopped
+    security_opt:
+      - label:disable
+    stdin_open: true
+    tty: true
+    volumes:
+      - /dev/net:/dev/net:z
+      - ${OPENVPN}:/vpn
+    labels:
+      - com.centurylinklabs.watchtower.enable=true
+      - traefik.enable=true
+      #
+      # Exposed containers
+      # See more @ https://community.containo.us/t/docker-compose-with-network-mode-service-service-name/3395
+      #
+      - traefik.http.routers.deluge.entrypoints=websecured
+      - traefik.http.routers.deluge.tls.certresolver=myresolver
+      - traefik.http.routers.deluge.rule=Host(`deluge.${DOMAIN}`)
+    ports:
+      - 8112:8112 # Deluge
 
   plex:
     image: linuxserver/plex
@@ -90,6 +126,11 @@ services:
         ipv4_address: 172.20.1.2
     ports:
       - 8989:8989
+    depends_on:
+      - deluge
+      - sabnzbd
+      - jackett
+      - nzbhydra2
     labels:
       - com.centurylinklabs.watchtower.enable=true
       - traefik.enable=true
@@ -105,11 +146,6 @@ services:
       - ${TV_SHOWS}:/tv
       - ${TORRENT_DOWNLOADS}:/downloads
     restart: unless-stopped
-    depends_on:
-      - deluge
-      - sabnzbd
-      - jackett
-      - nzbhydra2
 
   radarr:
     image: linuxserver/radarr
@@ -119,6 +155,11 @@ services:
         ipv4_address: 172.20.1.3
     ports:
       - 7878:7878
+    depends_on:
+      - deluge
+      - sabnzbd
+      - jackett
+      - nzbhydra2
     labels:
       - com.centurylinklabs.watchtower.enable=true
       - traefik.enable=true
@@ -134,11 +175,6 @@ services:
       - ${MOVIES}:/movies
       - ${TORRENT_DOWNLOADS}:/downloads
     restart: unless-stopped
-    depends_on:
-      - deluge
-      - sabnzbd
-      - jackett
-      - nzbhydra2
 
   bazarr:
     image: linuxserver/bazarr
@@ -148,6 +184,9 @@ services:
         ipv4_address: 172.20.1.4
     ports:
       - 6767:6767
+    depends_on:
+      - sonarr
+      - radarr
     labels:
       - com.centurylinklabs.watchtower.enable=true
       - traefik.enable=true
@@ -163,9 +202,6 @@ services:
       - ${MOVIES}:/movies
       - ${TV_SHOWS}:/tv
     restart: unless-stopped
-    depends_on:
-      - sonarr
-      - radarr
 
   jackett:
     image: linuxserver/jackett
@@ -216,11 +252,9 @@ services:
   deluge:
     image: linuxserver/deluge
     container_name: deluge
-    networks:
-      default:
-        ipv4_address: 172.20.1.7
-    ports:
-      - 8112:8112
+    network_mode: service:vpn
+    depends_on:
+      - vpn
     labels:
       - com.centurylinklabs.watchtower.enable=true
       - traefik.enable=true
