config[docker]: Splitted docker-compose files
Supporting the following:
* Unprotected torrenting
* VPN Protected torrenting
* Extra disk volumes for media containers
* Plex Hardware Transcoding

--- a/.github/workflows/multimedia-stack-deployment.yml
+++ b/.github/workflows/multimedia-stack-deployment.yml
@@ -20,7 +20,5 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Run tests
-        run: |
-          docker-compose -f docker-compose.yml up -d
-
+      - name: Main Stack Deployment + VPN Protected Torrenting
+        run: docker-compose -f docker-compose.yml -f docker-compose.torrents-on-vpn.yml up -d
