config[deluge]: Exposed port 8112

--- a/docker-compose.torrents.yml
+++ b/docker-compose.torrents.yml
@@ -7,6 +7,8 @@ services:
     networks:
       default:
         ipv4_address: 172.20.1.7
+    ports: 
+      - 8112:8112
     labels:
       - com.centurylinklabs.watchtower.enable=true
       - traefik.enable=true
