config[docker]: New volumes layout
Following best practices as per
https://www.reddit.com/r/usenet/wiki/docker\#wiki_the_best_docker_setup

--- a/.env
+++ b/.env
@@ -21,31 +21,35 @@ SSL_ACME_EMAIL=crism60@gmail.com
 VPN_DNS=103.86.96.100
 
 #
-# Multimedia files location
+# See [this reddit post](https://www.reddit.com/r/usenet/wiki/docker#wiki_the_best_docker_setup) 
+#   for recommendations on how to organize your media depending on your setup.
 #
-TV_SHOWS=/data/2tb/media/tv
-MOVIES=/data/2tb/media/movies
-PICTURES=/data/2tb/media/pictures
-
+# My disks layout:
 #
-# Docker containers' volumes locations (dirs will be created if don't exist).
-# Except for Plex, all the other volumes are very lightweight.
-# Storing them inside an external disk might be a good idea if you plan to run this on multiple machines using the same media library.
+# data
+# ├── 2tb
+# │   └── media
+# │       ├── movies
+# │       ├── pictures
+# │       └── tv
+# ├── extra
+# │   └── media
+# │       ├── movies
+# │       └── tv
+# └── ssd
+#     └── mediabox
+#         ├── containers
+#         ├── downloads
+#         └── repo
 #
-PLEX=/data/ssd/mediabox/plex
-SONARR=/data/ssd/mediabox/sonarr
-RADARR=/data/ssd/mediabox/radarr
-BAZARR=/data/ssd/mediabox/bazarr
-JACKETT=/data/ssd/mediabox/jackett
-DELUGE=/data/ssd/mediabox/deluge
-PORTAINER=/data/ssd/mediabox/portainer
-CALIBRE=/data/ssd/mediabox/calibre
-ORGANIZR=/data/ssd/mediabox/organizr
-DUPLICATI=/data/ssd/mediabox/duplicati
-NZBHYDRA2=/data/ssd/mediabox/nzbhydra2
-SABNZBD=/data/ssd/mediabox/sabnzbd
-TRAEFIK=/data/ssd/mediabox/traefik
-OPENVPN=/data/ssd/mediabox/openvpn
+# containers : Storing them inside an external disk might be a good idea if you plan to run this on multiple machines using the same media library.
+# downloads  : directory. It will hold incomplete and completed downloads. If you're using an external HDD to store your media files, 
+#                           it might be a good idea to keep downloads (until moved by Sonarr/Radarr, and if you have enough space) in an SSD disk partition.
+#                           This aims to avoid constant write ops on the external HDD.
+#
+DATA=/data
+CONTAINERS=/data/ssd/mediabox/containers
+DOWNLOADS=/data/ssd/mediabox/downloads
 
 #
 # Calibre credentials
@@ -53,15 +57,6 @@ OPENVPN=/data/ssd/mediabox/openvpn
 #
 CALIBRE_USERNAME=cmiranda
 CALIBRE_PASSWORD=9537d74bf1388c80c5745127b20f87d2
-
-#
-# Downloads directory. It will hold incomplete and completed downloads.
-# If you're using an external HDD to store your media files, 
-#   it might be a good idea to keep downloads (until moved by Sonarr/Radarr, and if you have enough space) in an SSD disk partition.
-#   This aims to avoid constant write ops on the external HDD.
-#
-TORRENT_DOWNLOADS=/data/ssd/mediabox/deluge/downloads
-USENET_DOWNLOADS=/data/ssd/mediabox/sabnzbd/downloads
 
 #
 # Your local timezone
