--- a/docker-compose.torrents-on-vpn.yml
+++ b/docker-compose.torrents-on-vpn.yml
@@ -23,7 +23,7 @@ services:
     tty: true
     volumes:
       - /dev/net:/dev/net:z
-      - ${OPENVPN}:/vpn
+      - ${CONTAINERS}/openvpn:/vpn
     labels:
       - com.centurylinklabs.watchtower.enable=true
       - traefik.enable=true
@@ -54,6 +54,6 @@ services:
       - PGID=${PGID}
       - TZ=${TIMEZONE}
     volumes:
-      - ${DELUGE}/config:/config
-      - ${TORRENT_DOWNLOADS}:/downloads
+      - ${CONTAINERS}/deluge/config:/config
+      - ${DOWNLOADS}/torrents:/downloads
     restart: unless-stopped
