fix[watchtower]: Using containrrr's image. Fixed cron

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,13 @@ version: "3.3"
 
 services:
   watchtower:
-    image: v2tec/watchtower
+    image: containrrr/watchtower
     container_name: watchtower
     network_mode: host
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ${HOME}/.docker/config.json:/config.json
-    command: --label-enable --cleanup --schedule "0 4 * * *"
+    command: --label-enable --cleanup --schedule "0 0 4 * * *"
 
   traefik:
     image: traefik
