config[organizr-v2]: Support for multiple image tags

--- a/.env
+++ b/.env
@@ -58,6 +58,16 @@ DOWNLOADS=/data/ssd/mediabox/downloads
 CALIBRE_USERNAME=cmiranda
 CALIBRE_PASSWORD=9537d74bf1388c80c5745127b20f87d2
 
+# 
+#    The latest tag will get you the original Organizr v2 image.
+#    The php-fpm tag includes the implementation of a socket connection for PHP-FPM instead of an HTTP connection. It also includes the PM changes for the www.conf file that we recommend to users that are just getting started. One thing to note is that, if you mounted the /etc/php7/php-fpm.d/ directory for the container to your Host, you MUST recreate your container WITHOUT that mount. You will also want to remove the /path/to/Org/config/php directory from your Docker Host as that can cause issues as well. This is designed as a drop-in to get PHP-FPM working without having to mount extra directories, etc.
+#    The plex tag will get you the original Organizr v2 image, but with some changes found in the plex-theme branch of the GitHub repo to accommodate the Plex Theme for Organizr v2 by Burry.
+#    The armhf tag is an adaptation of the php-fpm image for ArmHF platforms like the RaspberryPi.
+#    The arm64 tag is an adaptation of the php-fpm image for Arm64 platforms like the ASRock64.
+#    The dev- equivalent tags pull from the v2-develop branch of the GitHub repository instead of the main v2-master branch.
+#
+ORGANIZR_TAG=latest
+
 #
 # Your local timezone
 #
