style[deluge]: Dark Mode

--- a/.env
+++ b/.env
@@ -69,6 +69,12 @@ CALIBRE_PASSWORD=9537d74bf1388c80c5745127b20f87d2
 ORGANIZR_TAG=latest
 
 #
+# Thanks to https://github.com/gilbN/theme.park
+# See themes/deluge for more options (e.g: aquamarine, dark, plex)
+#
+DELUGE_THEME=darker
+
+#
 # Your local timezone
 #
 TIMEZONE=America/Argentina/Buenos_Aires
