config[docker]: .env.template; Removed original .env

--- a/.env.template
+++ b/.env.template
@@ -12,8 +12,8 @@ PGID=1000
 #
 # Custom domain and certificates
 #
-DOMAIN=crismiranda.net
-SSL_ACME_EMAIL=crism60@gmail.com
+DOMAIN=example.com
+SSL_ACME_EMAIL=you@mail.com
 
 #
 # VPN DNS (e.g: https://support.nordvpn.com/General-info/1047409702/What-are-your-DNS-server-addresses.htm)
@@ -55,8 +55,8 @@ DOWNLOADS=/data/ssd/mediabox/downloads
 # Calibre credentials
 # PASSWORD => md5 hash for the calibre desktop gui.
 #
-CALIBRE_USERNAME=cmiranda
-CALIBRE_PASSWORD=9537d74bf1388c80c5745127b20f87d2
+CALIBRE_USERNAME=yourusername
+CALIBRE_PASSWORD=8543a52ww3456g6785725427b20f87d2
 
 # 
 #    The latest tag will get you the original Organizr v2 image.
