organizr: Migrated from old v2 docker image to new

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -236,7 +236,7 @@ services:
       - traefik.enable=false
 
   organizr:
-    image: organizrtools/organizr-v2:${ORGANIZR_TAG}
+    image: organizr/organizr
     container_name: organizr
     networks:
       default:
