--- a/docker-compose.books.yml
+++ b/docker-compose.books.yml
@@ -1,32 +1,6 @@
 version: "3.3"
 
 services:
-  calibre:
-    image: linuxserver/calibre
-    container_name: calibre
-    networks:
-      default:
-        ipv4_address: 172.20.2.1
-    ports:
-      - 9080:8080
-      - 9081:8081
-    labels:
-      - com.centurylinklabs.watchtower.enable=true
-      - traefik.enable=true
-      - traefik.http.routers.calibre.rule=Host(`calibre.${DOMAIN}`)
-      - traefik.http.routers.calibre.entrypoints=websecured
-      - traefik.http.routers.calibre.tls.certresolver=myresolver
-      - traefik.http.services.calibre.loadbalancer.server.port=8080
-    environment:
-      - PUID=${PUID}
-      - PGID=${PGID}
-      - TZ=${TIMEZONE}
-      - GUAC_USER=${CALIBRE_USERNAME}
-      - GUAC_PASS=${CALIBRE_PASSWORD}
-    volumes:
-      - ${CONTAINERS}/calibre:/config
-    restart: unless-stopped
-
   calibre-web:
     image: linuxserver/calibre-web
     container_name: calibre-web
@@ -47,6 +21,6 @@ services:
       - TZ=Europe/London
       - DOCKER_MODS=linuxserver/calibre-web:calibre
     volumes:
-      - ${CONTAINERS}/calibre-web:/config
-      - ${CONTAINERS}/calibre:/books
+      - ${CONTAINERS}/calibre-web/config:/config
+      - ${CONTAINERS}/calibre-web/books:/books
     restart: unless-stopped
